--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "sass": "^1.79.4",
     "swiper": "^11.1.4",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
