--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "antd": "^5.18.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
@@ -19,7 +20,8 @@
     "sass": "^1.79.4",
     "swiper": "^11.1.4",
     "typewriter-effect": "^2.21.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
